platform-lab-global-manifest/apps/hello-gitops/overlays/prd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-gitops
  labels:
    app: hello-gitops
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-gitops
  template:
    metadata:
      labels:
        app: hello-gitops
      annotations:
        instrumentation.opentelemetry.io/inject-python: "true"
    spec:
      serviceAccountName: hello-gitops-sa
      containers:
        - name: hello-gitops
          image: image-set
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
