platform-lab-global-manifest/apps/hello-gitops/overlays/prd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-gitops-svc
  labels:
    app: hello-gitops
spec:
  selector:
    app: hello-gitops
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
