platform-lab-global-manifest/apps/hello-gitops/overlays/prd/ingress.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: hello-gitops-vs
spec:
  hosts:
  - "hello.paulojuniorsre.com.br"
  gateways:
    - istio-system/global-gateway
  http:
    - match:
        - uri:
            prefix: "/" # todas as requisições
      route:
        - destination:
            host: hello-gitops-svc
            port:
              number: 80
